feat:get user profile with appointments

--- a/src/common/CustomLink/CustomLink.css
+++ b/src/common/CustomLink/CustomLink.css
@@ -2,7 +2,7 @@
 .navigateDesign {
 
     font-weight: bold;
-    color: orange;
+    color: rgb(14, 71, 227);
 
     transition: 0.4s;
     margin: 1em;
