--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,7 +3,7 @@
     height: 88vh;
     max-width: 100%;
 
-    background-color: beige;
+    background-color: rgb(211, 220, 229);
 
     display: flex;
     flex-direction: column;
