--- a/src/pages/LogOut/LogOut.css
+++ b/src/pages/LogOut/LogOut.css
@@ -7,7 +7,8 @@
     justify-content: center;
     align-items: center;
 
-    background-color:  beige;
+    background-color: rgb(211, 220, 229);
+    
     color: black;
     font-weight: bold;
     font-size: 5vw;
