--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -2,8 +2,8 @@
 
     height: 88vh;
     min-width: 100%;
-
-    background-color: beige;
+    
+    background-color: rgb(211, 220, 229);
 
     display: flex;
     flex-direction: column;
