--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -3,16 +3,16 @@
     min-width: 100%;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 
-    background-color: aqua;
+    background-color: rgb(211, 220, 229);
 }
 
 
 .profileCardDesign {
-    height: 40vh;
+    height: 80vh;
     width: 90vw;
     border-radius: 1em;
     display: flex;
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: crimson;
+    background-color: rgb(221, 185, 193);
 }
 
 .img {
@@ -34,9 +34,50 @@
     width: 40em; */
     text-align: justify;
 }
+
 .user {
     margin: 2em;
     /* height: 40em;
     width: 40em; */
 
+}
+
+.inputFormat {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.inputTitle {
+    height:2.5em;
+    width: 10em;
+
+    color: black;
+    display: flex;
+    justify-content: end;
+}
+.userData{
+    height: 80vh;
+    width: 45vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.userImage{
+    height: 80vh;
+    width: 45vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.imageFormat{
+
+    height: 10em;
+    width: 10em;
 }
