--- a/src/pages/Appointments/Appointments.css
+++ b/src/pages/Appointments/Appointments.css
@@ -1,6 +1,6 @@
 .appointmentsDesign {
     min-height: 84vh;
-    width: 100vw;
+    min-width: 100%;
 
     display: flex;
     flex-direction: column;
@@ -25,4 +25,14 @@
     align-items: center;
     margin: 0.5em;
     font-size:1.4vw !important;
+}
+
+.newAppointment{
+    height: 5em;
+    width: 30em;
+    background-color: aquamarine;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
