--- a/src/pages/NewAppointment copy/NewAppointment.css
+++ b/src/pages/NewAppointment copy/NewAppointment.css
@@ -1,11 +1,31 @@
 .newappointmentsDesign {
-    min-height: 84vh;
+    
+    min-height: 90em;
     min-width: 100%;
 
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: start;
 
     background-color: rgb(211, 220, 229);
+}
+.prueba{
+    color: aqua;
+}
+
+.cardNewAppointment{
+    width:50em;
+    height: 90em;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: start;
+
+    margin-top: 2em;
+    padding: 1em;
+    border-radius: 1em;
+    background-color: bisque;
+    
 }
