--- a/src/common/CustomButton/CustomButton.css
+++ b/src/common/CustomButton/CustomButton.css
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: center;
     margin: 1em;
+    cursor: pointer;
 }
 
 .cButtonDesign:hover {
@@ -28,4 +29,20 @@
 
 .cButtonGreen:hover {
     background-color: darkgreen;
+}
+.buttonAppointment{
+    height: 3em;
+    width: 8em;
+
+    border-radius: 0.5em;
+
+    background-color: red;
+    color: white;
+    font-weight: bold;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1em;
+    cursor: pointer;
 }
