--- a/src/common/CustomLink/CustomLink.css
+++ b/src/common/CustomLink/CustomLink.css
@@ -2,7 +2,7 @@
 .navigateDesign {
 
     font-weight: bold;
-    color: rgb(14, 71, 227);
+    color: black;
 
     transition: 0.4s;
     margin: 1em;
@@ -13,6 +13,6 @@
     cursor: pointer;
     
     transition: 0.4s;
-    color: black;
-
+    color: crimson;
+translate: 0 -0.5em;
 }
