--- a/src/common/Header/Header.css
+++ b/src/common/Header/Header.css
@@ -1,6 +1,6 @@
 .headerDesign {
-    height: 16vh;
-    max-width: 100%;
+    height: auto;
+    min-width: 100%;
 
     background-image: url(../../img/header.jpg);
     display: flex;
@@ -13,3 +13,4 @@
     display: flex;
     flex-direction: row;
 }
+
