--- a/src/common/CustomDelete/CustomDelete.css
+++ b/src/common/CustomDelete/CustomDelete.css
@@ -2,7 +2,7 @@
 .likeDesign {
 
     font-weight: bold;
-    color: white;
+    color: rgb(0, 0, 0);
 
     transition: 0.4s;
     margin: 1em;
@@ -13,6 +13,6 @@
     cursor: pointer;
     
     transition: 0.4s;
-    color: black;
+    color: rgb(255, 0, 0);
     font-size: large;
 }
