--- a/src/pages/NewAppointment/NewAppointment.css
+++ b/src/pages/NewAppointment/NewAppointment.css
@@ -8,7 +8,7 @@
     justify-content: space-around;
     align-items: start;
 
-    background-color: rgb(211, 220, 229);
+    background: linear-gradient(rgb(219, 219, 219), black 99%);
 }
 
 
