--- a/src/common/CustomInput/CustomInput.css
+++ b/src/common/CustomInput/CustomInput.css
@@ -5,7 +5,8 @@
   border: 0.2em solid black;
   border-radius: 0.5em;
   margin: 1em;
-  color: white;
+  background-color: white;
+  color: black;
   font-weight: bold;
 }
 
