--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -3,7 +3,7 @@
     height: 88vh;
     min-width: 100%;
 
-    background-color: rgb(211, 220, 229);
+    background: linear-gradient(rgb(219, 219, 219), black 99%);
 
     display: flex;
     flex-direction: column;
