--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -1,13 +1,12 @@
 .servicesDesign {
-    min-height: 84vh;
+    min-height: 90vh;
     min-width: 100%;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    background-color: rgb(211, 220, 229);
+    background: linear-gradient(rgb(219, 219, 219), black 99%);
 }
 
 .appointmentsCardDesign {
