--- a/src/pages/Users/Users.css
+++ b/src/pages/Users/Users.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: rgb(211, 220, 229);
+    background: linear-gradient(rgb(219, 219, 219), black 99%);
 }
 
 .usersCardDesign {
