--- a/src/common/CustomInput/CustomInput.css
+++ b/src/common/CustomInput/CustomInput.css
@@ -4,7 +4,7 @@
 
   border: 0.2em solid black;
   border-radius: 0.5em;
-  margin: 1em;
+  margin-top: 2em;
   background-color: white;
   color: black;
   font-weight: bold;
