--- a/src/pages/Appointments/Appointments.css
+++ b/src/pages/Appointments/Appointments.css
@@ -6,8 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    background: linear-gradient(rgb(219, 219, 219), black 99%);
+    background-image: url(../../img/header.jpg);
 }
 
 
