--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
 
-    background: linear-gradient(rgb(219, 219, 219), black 99%);
+    background-image: url(../../img/header.jpg);
 }
 
 
