--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -3,7 +3,7 @@
     height: 88vh;
     min-width: 100%;
 
-    background: linear-gradient(rgb(219, 219, 219), black 99%);
+    background-image: url(../../img/header.jpg);
 
     display: flex;
     flex-direction: column;
@@ -14,4 +14,22 @@
 .error {
     height: 1em;
     color: red;
+    margin-top: 0.3em;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.cardRegisterDesign{
+    height: 35em;
+    width: 25em;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: black;
+    box-shadow: 0 0 10px 0 black inset, 0 0 40px 2px black;
+    border-radius: 1em;
 }
