--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -6,49 +6,43 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(rgb(219, 219, 219), black 99%);
+
+    background-image: url(../../img/header.jpg);
 }
 
-.appointmentsCardDesign {
-    height: 30vh;
-    width: 90vw;
-    border-radius: 1em;
-    background-color: crimson !important;
-    opacity: 90%;
+.cardService{
+    width: 20em !important;
+    height: 33em !important;
 
-    color:black;
+    margin: 0.5em;
+
     display: flex;
-    flex-direction: row !important;
     justify-content: center;
     align-items: center;
-    margin: 0.5em;
-    font-size:1.4vw !important;
+
+    background-color: black;
+    box-shadow: 0 0 10px 0 black inset, 0 0 10px 2px black;
+    border-radius: 1em;
+    color: white;
+    font-size:large;
+
+    border-width: 0.1em;
+    border-color: black;
 }
 
 .imageCard{
-    height: 10em;
-    width: 10em;
-}
-
-.prueba{
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-}
-.cardService{
-    width: 15em;
-    height: 30em;
-    margin: 0.5em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 1.5em;
+    height: 15em !important;
+    width: 15em !important;
+    background-color: crimson;
+    box-shadow: 0 0 10px 0 crimson inset, 0 0 20px 2px crimson;
+    border-radius: 1em;
+    border-width: 1em;
+    border-color: black;
 }
 
 .carousel-control-prev-icon, 
 .carousel-control-next-icon {
-    filter: invert(1);
-    
+    border-radius: 50%;
+    border: 1px solid rgb(0, 0, 0);    
   }
