--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,17 +1,17 @@
-.profileDesign {
-    height: 84vh;
+.profileUserDesign {
+    height: 90vh;
     min-width: 100%;
 
     display: flex;
     justify-content: center;
     align-items: center;
-
+    background-size: contain;
     background-image: url(../../img/header.jpg);
 }
 
 
 .profileUserCardDesign {
-    height: 80vh;
+    height: 85vh;
     width: 70vw;
     border-radius: 1em;
     display: flex;
@@ -26,25 +26,7 @@
     font-size: large;
 }
 
-.img {
-    height: 10em;
-    width: 10em;
 
-}
-
-.appointment {
-    margin: 2em;
-    /* height: 40em;
-    width: 40em; */
-    text-align: justify;
-}
-
-.user {
-    margin: 2em;
-    /* height: 40em;
-    width: 40em; */
-
-}
 
 .inputByIdFormat {
     display: flex;
@@ -53,9 +35,9 @@
     align-items: center;
 }
 
-.inputByIdTitle {
-    height: 1em;
-    width: 10em;
+.inputById {
+    height: 1vh;
+    width: 10vw;
 
     color: white;
     display: flex;
@@ -80,10 +62,10 @@
     align-items: center;
 }
 
-.imageByIdFormat {
+.imageById {
 
-    height: 15em;
-    width: 15em;
+    height: 45vh;
+    width: 25vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -96,11 +78,17 @@
 }
 
 .cardByIdUp {
-    height: 65vh;
+    height: 70vh;
     width: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+@media screen and (max-width: 1200px) {
+    .cardByIdUp {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .cardDown {
