--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -12,7 +12,7 @@
 }
 
 .error {
-    height: 1em;
+    height: 1vh;
     color: red;
     margin-top: 0.3em;
     display: flex;
@@ -21,8 +21,8 @@
 }
 
 .cardRegisterDesign{
-    height: 35em;
-    width: 25em;
+    height: 80vh;
+    width: 30vw;
 
     display: flex;
     flex-direction: column;
@@ -33,3 +33,11 @@
     box-shadow: 0 0 10px 0 black inset, 0 0 40px 2px black;
     border-radius: 1em;
 }
+
+@media screen and (max-width: 700px) {
+    .cardRegisterDesign {
+      height: 86vh;
+      width: 85vw;
+      
+    }
+  }
