--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -10,9 +10,21 @@
     background-image: url(../../img/header.jpg);
 }
 
-.cardService{
-    width: 20em !important;
-    height: 33em !important;
+.responsive {
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width: 1000px) {
+    .responsive {
+        flex-direction: column;
+        align-items: center; 
+    }
+}
+
+.cardAllService{
+    width: 28vw;
+    height: 80vh;
 
     margin: 0.5em;
 
@@ -29,17 +41,29 @@
     border-width: 0.1em;
     border-color: black;
 }
-
-.imageCard{
+.imageServiceCard{
     margin-top: 1.5em;
-    height: 15em !important;
-    width: 15em !important;
+    height: 30vh;
+    width: 20vw;
     background-color: crimson;
     box-shadow: 0 0 10px 0 crimson inset, 0 0 20px 2px crimson;
     border-radius: 1em;
     border-width: 1em;
     border-color: black;
 }
+@media screen and (max-width: 1000px) {
+    .cardAllService {
+        width: 80vw;
+        height: 85vh;
+        flex-direction: column;
+        align-items: center; 
+    }
+    .imageServiceCard{
+        height: 30vh;
+        width: 60vw;
+    }
+}
+
 
 .carousel-control-prev-icon, 
 .carousel-control-next-icon {
