--- a/src/pages/Users/Users.css
+++ b/src/pages/Users/Users.css
@@ -9,7 +9,17 @@
 
     background-image: url(../../img/header.jpg);
 }
+.responsive {
+    display: flex;
+    justify-content: center;
+}
 
+@media screen and (max-width: 1000px) {
+    .responsive {
+        flex-direction: column;
+        align-items: center; 
+    }
+}
 .usersCardDesign {
     height: 30vh;
     width: 90vw;
@@ -19,7 +29,7 @@
 
     color: black;
     display: flex;
-    flex-direction: row !important;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: 0.5em;
@@ -36,15 +46,6 @@
     border-radius: 1em;
     border-width: 1em;
     border-color: black;
-
-}
-
-.prueba {
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
 
 }
 
@@ -80,7 +81,26 @@
     translate: 0em -0.3em;
     color: black;
 
+    .imageCardUser{
+        box-shadow: 0 0 10px 0 black inset, 0 0 20px 2px black;
+    }
 }
+
+@media screen and (max-width: 1000px) {
+    .cardUser {
+        width: 80vw;
+        height: 85vh;
+        flex-direction: column;
+        align-items: center; 
+    }
+    .imageCardUser{
+        height: 30vh;
+        width: 60vw;
+    }
+}
+
+
+
 
 .carousel-control-prev,
 .carousel-control-next {
