--- a/src/pages/AppointmentsById/AppointmentsById.css
+++ b/src/pages/AppointmentsById/AppointmentsById.css
@@ -9,8 +9,29 @@
 
     background-image: url(../../img/header.jpg);
 }
+.responsive {
+    display: flex;
+    justify-content: center;
+}
 
-
+@media screen and (max-width: 1000px) {
+    .responsive {
+        flex-direction: column;
+        align-items: center; 
+    }
+}
+@media screen and (max-width: 1000px) {
+    .appointmentsCardDesign {
+        width: 80vw;
+        height: 85vh;
+        flex-direction: column;
+        align-items: center; 
+    }
+    .imageServiceCard{
+        height: 30vh;
+        width: 60vw;
+    }
+}
 .appointmentsCardDesign {
     height: 30vh;
     width: 90vw;
