--- a/src/pages/NewService/NewService.css
+++ b/src/pages/NewService/NewService.css
@@ -3,39 +3,46 @@
     min-width: 100%;
 
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-
+    background-size: contain;
     background-image: url(../../img/header.jpg);
 }
 
-.inputByIdFormat {
+
+.serviceCardDesign {
+    height: 70vh;
+    width: 70vw;
+    border-radius: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: rgb(0, 0, 0);
+    box-shadow: 0 0 10px 0 black inset, 0 0 10px 2px black;
+    border-radius: 1em;
+    color: white;
+    font-size: large;
+}
+
+.inputServiceFormat {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.inputByIdTitle {
-    height: 1em;
-    width: 10em;
+.inputServiceTitle {
+    height: 1vh;
+    width: 10vw;
 
     color: white;
     display: flex;
     justify-content: end;
 }
 
-.userByIdData {
-    height: 80vh;
-    width: 35vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.userByIdImage {
+.serviceImage {
     height: 80vh;
     width: 30vw;
     display: flex;
@@ -46,35 +53,69 @@
 
 .imageServiceFormat {
 
-    height: 15em;
-    width: 15em;
+    height: 45vh;
+    width: 25vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: crimson;
+    box-shadow: 0 0 10px 0 crimson inset, 0 0 20px 2px crimson;
     border-radius: 1em;
     border-width: 1em;
     border-color: black;
 }
 
-.cardByIdUp {
-    height: 65vh;
+.cardServiceUp {
+    height: 50vh;
+    width: 90vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+@media screen and (max-width: 1200px) {
+    .cardServiceUp {
+        height: 130vh;
+        flex-direction: column;
+        align-items: center;
+    }
+    .serviceCardDesign {
+        height: auto;
+        width: 90vw;
+        flex-direction: column;
+        align-items: center;
+    }
+    .serviceDesign {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+    }
+    .inputDesign {
+        width: 55vw;
+    }
+    .serviceData{
+        margin-left: 20vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+ 
+    }
+    .imageServiceFormat{
+        height: 45vh;
+        width: 60vw;
+    }
+}
+
+.cardServiceDown {
+    height: 20vh;
     width: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.cardDown {
-    height: 15vh;
-    width: 90vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.inputImageByIdTitle{
+.inputImageServiceTitle{
     height: 1em;
     width: 15em;
     display: flex;
@@ -82,4 +123,8 @@
     align-items: flex-start;
     color: white;
     margin: 1em;
+}
+.inputDesignAvaiable{
+    background-color: rgb(194, 231, 159);
+
 }
