--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,5 +1,5 @@
 .profileUserDesign {
-    height: 90vh;
+    height: 84vh;
     min-width: 100%;
 
     display: flex;
@@ -11,7 +11,7 @@
 
 
 .profileUserCardDesign {
-    height: 85vh;
+    height: 70vh;
     width: 70vw;
     border-radius: 1em;
     display: flex;
@@ -28,14 +28,14 @@
 
 
 
-.inputByIdFormat {
+.inputUserFormat {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.inputById {
+.inputUser {
     height: 1vh;
     width: 10vw;
 
@@ -44,7 +44,7 @@
     justify-content: end;
 }
 
-.userByIdData {
+.userData {
     height: 80vh;
     width: 35vw;
     display: flex;
@@ -53,7 +53,7 @@
     align-items: center;
 }
 
-.userByIdImage {
+.userImage {
     height: 80vh;
     width: 30vw;
     display: flex;
@@ -62,7 +62,7 @@
     align-items: center;
 }
 
-.imageById {
+.imageUser {
 
     height: 45vh;
     width: 25vw;
@@ -77,29 +77,48 @@
     border-color: black;
 }
 
-.cardByIdUp {
-    height: 70vh;
+.cardUserUp {
+    height: 50vh;
     width: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 @media screen and (max-width: 1200px) {
-    .cardByIdUp {
+    .cardUserUp {
+        height: 130vh;
         flex-direction: column;
         align-items: center;
     }
+    .profileUserCardDesign {
+        height: auto;
+        width: 90vw;
+        flex-direction: column;
+        align-items: center;
+    }
+    .profileUserDesign {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+    }
+    .inputDesign {
+        width: 60vw;
+    }
+    .imageUser{
+        height: 45vh;
+        width: 60vw;
+    }
 }
 
-.cardDown {
-    height: 15vh;
+.cardUserDown {
+    height: 20vh;
     width: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.inputImageByIdTitle{
+.inputImageUserTitle{
     height: 1em;
     width: 15em;
     display: flex;
