--- a/src/pages/ProfileById/ProfileById.css
+++ b/src/pages/ProfileById/ProfileById.css
@@ -1,18 +1,16 @@
-.profileDesign {
+.profileUserDesign {
     height: 84vh;
     min-width: 100%;
 
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-
     background-image: url(../../img/header.jpg);
 }
 
 
-.profileByIdCardDesign {
-    height: 80vh;
+.profileUserCardDesign {
+    height: 70vh;
     width: 70vw;
     border-radius: 1em;
     display: flex;
@@ -25,46 +23,27 @@
     border-radius: 1em;
     color: white;
     font-size: large;
-
 }
 
-.img {
-    height: 10em;
-    width: 10em;
 
-}
 
-.appointment {
-    margin: 2em;
-    /* height: 40em;
-    width: 40em; */
-    text-align: justify;
-}
-
-.user {
-    margin: 2em;
-    /* height: 40em;
-    width: 40em; */
-
-}
-
-.inputByIdFormat {
+.inputUserFormat {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.inputByIdTitle {
-    height: 1em;
-    width: 10em;
+.inputUser {
+    height: 1vh;
+    width: 10vw;
 
     color: white;
     display: flex;
     justify-content: end;
 }
 
-.userByIdData {
+.userData {
     height: 80vh;
     width: 35vw;
     display: flex;
@@ -73,7 +52,7 @@
     align-items: center;
 }
 
-.userByIdImage {
+.userImage {
     height: 80vh;
     width: 30vw;
     display: flex;
@@ -82,10 +61,10 @@
     align-items: center;
 }
 
-.imageByIdFormat {
+.imageUser {
 
-    height: 15em;
-    width: 15em;
+    height: 45vh;
+    width: 25vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -97,23 +76,48 @@
     border-color: black;
 }
 
-.cardByIdUp {
-    height: 65vh;
+.cardUserUp {
+    height: 50vh;
+    width: 90vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+@media screen and (max-width: 1200px) {
+    .cardUserUp {
+        height: 130vh;
+        flex-direction: column;
+        align-items: center;
+    }
+    .profileUserCardDesign {
+        height: auto;
+        width: 90vw;
+        flex-direction: column;
+        align-items: center;
+    }
+    .profileUserDesign {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+    }
+    .inputDesign {
+        width: 60vw;
+    }
+    .imageUser{
+        height: 45vh;
+        width: 60vw;
+    }
+}
+
+.cardUserDown {
+    height: 20vh;
     width: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.cardDown {
-    height: 15vh;
-    width: 90vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.inputImageByIdTitle{
+.inputImageUserTitle{
     height: 1em;
     width: 15em;
     display: flex;
