update: AWS deploy adjust

--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -3,7 +3,7 @@
     height: 88vh;
     min-width: 100%;
 
-    background-image: url(../../img/header.jpg);
+    background-image: url(../../../img/header.jpg);
 
     display: flex;
     flex-direction: column;
