--- a/src/pages/Appointments/Appointments.css
+++ b/src/pages/Appointments/Appointments.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(../../img/header.jpg);
+    background-image: url(../../../img/header.jpg);
 }
 
 
