--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,7 +4,7 @@
     height: 84vh;
     max-width: 100%;
 
-    background-image: url(../../img/header.jpg);
+    background-image: url(../../../img/header.jpg);
     
     display: flex;
     flex-direction: column;
