--- a/src/pages/NewAppointment/NewAppointment.css
+++ b/src/pages/NewAppointment/NewAppointment.css
@@ -8,7 +8,7 @@
     justify-content: space-around;
     align-items: start;
 
-    background-image: url(../../img/header.jpg);
+    background-image: url(../../../img/header.jpg);
 }
 
 
