--- a/src/pages/NewService/NewService.css
+++ b/src/pages/NewService/NewService.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     background-size: contain;
-    background-image: url(../../img/header.jpg);
+    background-image: url(../../../img/header.jpg);
 }
 
 
