--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../../img/header.jpg);
+    background-image: url(../../../img/header.jpg);
 }
 
 
