--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
 
-    background-image: url(../../img/header.jpg);
+    background-image: url(../../../img/header.jpg);
 }
 
 .responsive {
