--- a/src/pages/Service/Service.css
+++ b/src/pages/Service/Service.css
@@ -1,17 +1,15 @@
-.serviceDesign {
+.serviceByIdDesign {
     height: 84vh;
     min-width: 100%;
 
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-
     background-image: url(../../../img/header.jpg);
 }
 
 .serviceByIdCardDesign {
-    height: 80vh;
+    height: 70vh;
     width: 70vw;
     border-radius: 1em;
     display: flex;
@@ -19,33 +17,13 @@
     justify-content: center;
     align-items: center;
 
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(0, 0, 0);
     box-shadow: 0 0 10px 0 black inset, 0 0 10px 2px black;
     border-radius: 1em;
     color: white;
     font-size: large;
-
 }
 
-.img {
-    height: 10em;
-    width: 10em;
-
-}
-
-.appointment {
-    margin: 2em;
-    /* height: 40em;
-    width: 40em; */
-    text-align: justify;
-}
-
-.user {
-    margin: 2em;
-    /* height: 40em;
-    width: 40em; */
-
-}
 
 .inputByIdFormat {
     display: flex;
@@ -55,15 +33,14 @@
 }
 
 .inputByIdTitle {
-    height: 1em;
-    width: 10em;
+    height: 1vh;
+    width: 10vw;
 
     color: white;
     display: flex;
     justify-content: end;
 }
-
-.userByIdData {
+.serviceByIdData {
     height: 80vh;
     width: 35vw;
     display: flex;
@@ -71,8 +48,7 @@
     justify-content: center;
     align-items: center;
 }
-
-.userByIdImage {
+.serviceByIdImage {
     height: 80vh;
     width: 30vw;
     display: flex;
@@ -81,10 +57,10 @@
     align-items: center;
 }
 
-.imageByIdFormat {
 
-    height: 15em;
-    width: 15em;
+.imageByIdFormat {
+    height: 45vh;
+    width: 25vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -97,14 +73,53 @@
 }
 
 .cardByIdUp {
-    height: 65vh;
+    height: 50vh;
     width: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.cardDown {
+@media screen and (max-width: 1200px) {
+    .cardByIdUp {
+        height: 130vh;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .serviceByIdCardDesign {
+        height: auto;
+        width: 90vw;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .serviceByIdDesign {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .inputDesign {
+        width: 55vw;
+    }
+
+    .serviceData {
+        margin-left: 20vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .imageByIdFormat {
+        height: 45vh;
+        width: 60vw;
+    }
+}
+
+.cardByIdDown {
     height: 15vh;
     width: 90vw;
     display: flex;
@@ -112,7 +127,7 @@
     align-items: center;
 }
 
-.inputImageByIdTitle{
+.inputImageByIdTitle {
     height: 1em;
     width: 15em;
     display: flex;
@@ -121,7 +136,8 @@
     color: white;
     margin: 1em;
 }
-.inputDesignAvaiable{
+
+.inputDesignAvaiable {
     background-color: rgb(194, 231, 159);
 
 }
