--- a/src/pages/Service/Service.css
+++ b/src/pages/Service/Service.css
@@ -1,5 +1,5 @@
 .serviceByIdDesign {
-    height: 84vh;
+    min-height: 90vh;
     min-width: 100%;
 
     display: flex;
@@ -40,6 +40,7 @@
     display: flex;
     justify-content: end;
 }
+
 .serviceByIdData {
     height: 80vh;
     width: 35vw;
@@ -48,6 +49,7 @@
     justify-content: center;
     align-items: center;
 }
+
 .serviceByIdImage {
     height: 80vh;
     width: 30vw;
